doc(Input): add password input demo with `Form.Item`

--- a/src/components/input/demos/demo2.less
+++ b/src/components/input/demos/demo2.less
@@ -4,3 +4,11 @@
   font-size: 17px;
   line-height: 22px;
 }
+.eye {
+  padding: 4px;
+  cursor: pointer;
+  svg {
+    display: block;
+    font-size: var(--adm-font-size-7);
+  }
+}
